--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,48 +1,68 @@
-<div class="login-section">
-    <div class="row justify-content-center">
-        <div class="col-md-3"></div>
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-header" style="text-align: center"><h4>Login</h4></div>
-                <div class="card-body">
-                    <form [formGroup]="loginForm" (ngSubmit)="login()">
-                        <div class="form-group row">
-                            <label for="user_name" class="col-md-4 col-form-label text-md-right">Username</label>
-                            <div class="col-md-6">
-                                <input type="text" id="user_name" class="form-control" [formControlName]="'username'" name="user_name" required
-                                    autofocus>
-                                <span *ngIf="!loginForm.get('username').valid && loginForm.get('username').touched">
-                                   Please provide a valid username
-                                </span>
-                            </div>
-                        </div>
-
-                        <div class="form-group row">
-                            <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
-                            <div class="col-md-6">
-                                <input type="password" id="password" class="form-control" [formControlName]="'password'" name="password" required>
-                                <span *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched">
-                                  Password cannot be empty
-                                </span>
-                            </div>
-                        </div>
-
-                        <span class="col-md-6 offset-md-4">
-                            <button type="submit" class="login">
-                                Login
-                            </button>
-                            <span style="padding-left: 15px">New User? <a routerLink="/signup">SIGN UP</a></span>
-                        </span>
-                        <div class="login-failed" *ngIf='this.isError'>
-                             <p class="login-failed-text">Login Failed. Please check your credentials and try again.</p>
-                        </div>
-                        <div class="login-failed" [ngStyle]="{'background-color': 'green'}" *ngIf="this.registerSuccessMessage.length > 0">
-                            <p class="register-success-text">{{registerSuccessMessage}}</p>
-                       </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-3"></div>
+<main>
+  <section class="section section-shaped section-lg">
+    <div class="shape shape-style-1 bg-gradient-default">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
-</div>
+    <div class="container pt-lg-md">
+      <div class="row justify-content-center">
+        <div class="col-lg-5">
+          <div class="card bg-secondary shadow border-0">
+            <div class="card-body px-lg-5 py-lg-5">
+              <div class="text-center text-muted mb-4">
+                <small>Sign in</small>
+              </div>
+              <form [formGroup]="loginForm" (ngSubmit)="login()" role="form">
+                <div class="form-group mb-3" [ngClass]="{'focused':focus===true}">
+                  <div class="input-group input-group-alternative">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text"><i class="ni ni-email-83"></i></span>
+                    </div>
+                    <input class="form-control" placeholder="Username" type="text" id="user_name"
+                           [formControlName]="'username'" name="user_name" required autofocus>
+                  </div>
+                </div>
+                <div class="form-group" [ngClass]="{'focused':focus1===true}">
+                  <div class="input-group input-group-alternative">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
+                    </div>
+                    <input class="form-control" placeholder="Password" type="password" [formControlName]="'password'"
+                           name="password" required>
+                  </div>
+                </div>
+                <!--                <div class="custom-control custom-control-alternative custom-checkbox">-->
+                <!--                  <input class="custom-control-input" id=" customCheckLogin" type="checkbox">-->
+                <!--                  <label class="custom-control-label" for=" customCheckLogin">-->
+                <!--                    <span>Remember me</span>-->
+                <!--                  </label>-->
+                <!--                </div>-->
+                <div class="text-center">
+                  <button type="submit" class="btn btn-primary my-4">Sign in</button>
+                </div>
+              </form>
+            </div>
+          </div>
+          <div class="row mt-3">
+            <!--            <div class="col-6">-->
+            <!--              <a  class="text-light">-->
+            <!--                <small>Forgot password?</small>-->
+            <!--              </a>-->
+            <!--            </div>-->
+            <div class="col-6 text-right">
+              <a routerLink="/signup" class="text-light">
+                <small>Create new account</small>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</main>
