--- a/src/app/auth/user-profile/user-profile.component.html
+++ b/src/app/auth/user-profile/user-profile.component.html
@@ -1,8 +1,6 @@
 <div class="container">
   <div>
-    Welcome <b>{{name}}</b>.<br /> You have posted <b>{{postLength}}</b> time(s) and commented
-    <b>{{commentLength}}</b> time(s).
-    You can check your post and comment history below.
+    Welcome <b>{{name}}</b>.<br/>
   </div>
   <hr />
   <div>
@@ -16,7 +14,7 @@
   <div *ngFor="let comment of comments">
     <div class="comment">
       <div class="username">
-        <a routerLink="/user/comment.username">{{comment.userName}}</a>
+        <a routerLink="/user/comment.username">{{comment.username}}</a>
       </div>
       <div>
         <p>{{comment.duration}}</p>
