--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,35 +1,41 @@
-<header>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-        <div class="flex-grow-1">
-            <a aria-label="Home" class="logo" routerLink="/">
-<!--                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="icon-svg">-->
-<!--                    <g>-->
-<!--                        <circle fill="#FF4500" cx="10" cy="10" r="10"></circle>-->
-<!--                        <path fill="#FFF"-->
-<!--                            d="M16.67,10A1.46,1.46,0,0,0,14.2,9a7.12,7.12,0,0,0-3.85-1.23L11,4.65,13.14,5.1a1,1,0,1,0,.13-0.61L10.82,4a0.31,0.31,0,0,0-.37.24L9.71,7.71a7.14,7.14,0,0,0-3.9,1.23A1.46,1.46,0,1,0,4.2,11.33a2.87,2.87,0,0,0,0,.44c0,2.24,2.61,4.06,5.83,4.06s5.83-1.82,5.83-4.06a2.87,2.87,0,0,0,0-.44A1.46,1.46,0,0,0,16.67,10Zm-10,1a1,1,0,1,1,1,1A1,1,0,0,1,6.67,11Zm5.81,2.75a3.84,3.84,0,0,1-2.47.77,3.84,3.84,0,0,1-2.47-.77,0.27,0.27,0,0,1,.38-0.38A3.27,3.27,0,0,0,10,14a3.28,3.28,0,0,0,2.09-.61A0.27,0.27,0,1,1,12.48,13.79Zm-0.18-1.71a1,1,0,1,1,1-1A1,1,0,0,1,12.29,12.08Z">-->
-<!--                        </path>-->
-<!--                    </g>-->
-<!--                </svg>-->
-                <span class="text">
-                    Sanutem
-                </span>
-            </a>
+<nav class="navbar  navbar-expand-lg navbar-dark bg-primary mt-4">
+  <div class="container">
+    <a class="navbar-brand" routerLink="/"> <img src="../../assets/img/logo.PNG" height="62" width="74"/></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-primary"
+            aria-controls="navbar-primary" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbar-primary">
+      <div class="navbar-collapse-header">
+        <div class="row">
+          <div class="col-6 collapse-close">
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-primary"
+                    aria-controls="navbar-primary" aria-expanded="false" aria-label="Toggle navigation">
+              <span></span>
+              <span></span>
+            </button>
+          </div>
         </div>
-        <div class="flex-grow-1 float-right">
-            <div *ngIf="isLoggedIn" ngbDropdown class="float-right">
-                <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-                    <button (click)="goToUserProfile()" ngbDropdownItem>Profile</button>
-                    <button (click)="logout()" ngbDropdownItem>Logout</button>
-                </div>
-                <button class="userdetails" id="dropdownBasic1" ngbDropdownToggle>
-                    <img class="account-icon" ><img src="../../assets/img/doctors/doctors-3.jpg" height="100" width="100"/>
-                  {{username}}
-                </button>
-            </div>
-            <div *ngIf="!isLoggedIn">
-                <a routerLink="/sign-up" class="float-right sign-up mr-2">Sign up</a>
-                <a routerLink="/login" class="float-right login mr-2">Login</a>
-            </div>
-        </div>
-    </nav>
-</header>
+      </div>
+      <ul class="navbar-nav ml-lg-auto">
+        <li *ngIf="!isLoggedIn" class="nav-item">
+          <a class="nav-link" routerLink="/login">Login
+            <span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li *ngIf="!isLoggedIn" class="nav-item">
+          <a class="nav-link" routerLink="/sign-up">Sign Up</a>
+        </li>
+        <li *ngIf="isLoggedIn" class="nav-item" ngbDropdown placement="bottom-right">
+          <a class="nav-link no-caret" id="navbar-primary_dropdown_1" ngbDropdownToggle>{{username}}</a>
+          <div class="dropdown-menu-right" aria-labelledby="navbar-primary_dropdown_1" ngbDropdownMenu>
+            <a class="dropdown-item" (click)="goToUserProfile()">Profile</a>
+            <a class="dropdown-item" href="javascript:void(0)">Settings</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" (click)="logout()">Logout</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
