--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -114,9 +114,9 @@
                       <div class="input-group-prepend">
                         <span class="input-group-text"><i class="ni ni-calendar-grid-59"></i></span>
                       </div>
-                      <input class="form-control datepicker" placeholder="Birthday" formControlName="birthday"
-                             id="birthday" name="dp" [formControlName]="'birthday'" [(ngModel)]="model"
-                             ngbDatepicker #d="ngbDatepicker" (click)="d.toggle()" (focus)="focus1=true"
+                      <input class="form-control datepicker" placeholder="Birthday"
+                             id="birthday" name="dp" ngbDatepicker #d="ngbDatepicker" (click)="d.toggle()"
+                             (focus)="focus1=true"
                              (blur)="focus1=false" type="text" (select)="onDateSelection($event)" autocomplete="off"/>
                     </div>
                   </div>
