--- a/src/app/auth/user-profile/user-profile.component.html
+++ b/src/app/auth/user-profile/user-profile.component.html
@@ -1,5 +1,52 @@
-<div class="container">
-  <div>
-    Welcome <b>{{name}}</b>.<br/>
+<div class="row justify-content-center">
+  <div class="col-lg-6 mt-5 mt-lg-0">
+    <!-- Menu -->
+    <div class="mb-3">
+      <small class="text-uppercase font-weight-bold">Welcome <b>{{name}}</b>.<br/></small>
+    </div>
+    <ngb-tabset [justify]="'center'" class="custom-tab-content flex-column flex-md-row" type="pills">
+      <ngb-tab title="Search Professionals">
+      </ngb-tab>
+      <ngb-tab title="View Appointments">
+      </ngb-tab>
+      <ngb-tab title="Add Pet">
+      </ngb-tab>
+      <ngb-tab title="Attach medical studies">
+      </ngb-tab>
+      <ngb-tab title="Modify profile">
+      </ngb-tab>
+    </ngb-tabset>
+  </div>
+</div>
+<div class="row justify-content-center">
+  <div class="col-lg-6 mt-5 mt-lg-0">
+    <!-- Menu -->
+    <div class="mb-3">
+      <small class="text-uppercase font-weight-bold">Welcome <b>{{name}}</b>.<br/></small>
+    </div>
+    <ngb-tabset [justify]="'center'" class="custom-tab-content flex-column flex-md-row" type="pills">
+      <ngb-tab title="Link Receptionist">
+      </ngb-tab>
+      <ngb-tab title="View Patients">
+      </ngb-tab>
+      <ngb-tab title="View Calendar">
+      </ngb-tab>
+      <ngb-tab title="Modify profile">
+      </ngb-tab>
+    </ngb-tabset>
+  </div>
+</div>
+<div class="row justify-content-center">
+  <div class="col-lg-6 mt-5 mt-lg-0">
+    <!-- Menu -->
+    <div class="mb-3">
+      <small class="text-uppercase font-weight-bold">Welcome <b>{{name}}</b>.<br/></small>
+    </div>
+    <ngb-tabset [justify]="'center'" class="custom-tab-content flex-column flex-md-row" type="pills">
+      <ngb-tab title="View Professionals Appointments">
+      </ngb-tab>
+      <ngb-tab title="Modify profile">
+      </ngb-tab>
+    </ngb-tabset>
   </div>
 </div>
