--- a/src/app/auth/user-profile/user-profile.component.html
+++ b/src/app/auth/user-profile/user-profile.component.html
@@ -10,6 +10,9 @@
       <ngb-tab title="View Appointments">
       </ngb-tab>
       <ngb-tab title="Add Pet">
+        <ng-template ngbTabContent>
+          <a routerLink="register-pet">CLICK HERE TO ADD PET!!!!!!!!!!!!!!!!!!!!!!</a>
+        </ng-template>
       </ngb-tab>
       <ngb-tab title="Attach medical studies">
       </ngb-tab>
