--- a/src/app/auth/user-profile/user-profile.component.html
+++ b/src/app/auth/user-profile/user-profile.component.html
@@ -1,11 +1,11 @@
 <div  >
-<div class="row justify-content-center">
+<div class="row justify-content-center" *ngIf="roleUser === 'ROLE_PATIENT'">
   <div class="col-lg-6 mt-5 mt-lg-0">
     <!-- Menu -->
-    <div class="mb-3" *ngIf="roleUser === 'ROLE_PATIENT'">
+    <div class="mb-3">
       <small class="text-uppercase font-weight-bold">Welcome <b>{{name}}</b>.<br/></small>
     </div>
-    <div class="d-flex justify-content-center" *ngIf="roleUser === 'ROLE_PATIENT'">
+    <div class="d-flex justify-content-center">
       <ng-container class="custom-tab-content flex-column flex-md-row" >
         <button class="btn btn-1 btn-neutral" type="button">Search Professionals</button>
         <button class="btn btn-1 btn-neutral" type="button" routerLink="register-pet">Add Pet</button>
@@ -15,13 +15,13 @@
     </div>
   </div>
 </div>
-<div class="row justify-content-center">
+<div class="row justify-content-center" *ngIf="roleUser === 'ROLE_PROFESSIONAL'">
   <div class="col-lg-6 mt-5 mt-lg-0">
     <!-- Menu -->
-    <div class="mb-3" *ngIf="roleUser === 'ROLE_PROFESSIONAL'">
+    <div class="mb-3">
       <small class="text-uppercase font-weight-bold">Welcome <b>{{name}}</b>.<br/></small>
     </div>
-    <div class="d-flex justify-content-center" *ngIf="roleUser === 'ROLE_PROFESSIONAL'">
+    <div class="d-flex justify-content-center">
       <ng-container class="custom-tab-content flex-column flex-md-row">
         <button class="btn btn-1 btn-neutral" type="button">Link Receptionist</button>
         <button class="btn btn-1 btn-neutral" type="button">View Patients</button>
@@ -31,13 +31,13 @@
     </div>
   </div>
 </div>
-<div class="row justify-content-center">
+<div class="row justify-content-center" *ngIf="roleUser === 'ROLE_RECEPTIONIST'">
   <div class="col-lg-6 mt-5 mt-lg-0">
     <!-- Menu -->
-    <div class="mb-3" *ngIf="roleUser === 'ROLE_RECEPTIONIST'">
+    <div class="mb-3">
       <small class="text-uppercase font-weight-bold">Welcome <b>{{name}}</b>.<br/></small>
     </div>
-    <div class="d-flex justify-content-center"  *ngIf="roleUser === 'ROLE_RECEPTIONIST'">
+    <div class="d-flex justify-content-center">
       <ng-container class="custom-tab-content flex-column flex-md-row">
         <button class="btn btn-1 btn-neutral" type="button">View Appointments</button>
         <button class="btn btn-1 btn-neutral" type="button">Modify Profile</button>
