--- a/src/app/auth/user-profile/user-profile.component.html
+++ b/src/app/auth/user-profile/user-profile.component.html
@@ -2,15 +2,16 @@
 <div class="row justify-content-center" *ngIf="roleUser === 'ROLE_PATIENT'">
   <div class="col-lg-6 mt-5 mt-lg-0">
     <!-- Menu -->
-    <div class="mb-3">
-      <small class="text-uppercase font-weight-bold">Welcome <b>{{name}}</b>.<br/></small>
+    <div class="col-sm-9">
+      <h1 class="display-2 mb-0">Welcome <b>{{name}}</b>,</h1>
     </div>
     <div class="d-flex justify-content-center">
-      <ng-container class="custom-tab-content flex-column flex-md-row" >
+      <ng-container class="custom-tab-content flex-column flex-md-row">
         <button class="btn btn-1 btn-neutral" type="button">Search Professionals</button>
         <button class="btn btn-1 btn-neutral" type="button" routerLink="register-pet">Add Pet</button>
+        <button class="btn btn-1 btn-neutral" type="button">View Pets</button>
         <button class="btn btn-1 btn-neutral" type="button">Attach Medical Studies</button>
-        <button class="btn btn-1 btn-neutral" type="button">Modify Profile</button>
+        <button class="btn btn-1 btn-neutral" type="button" routerLink="modify-profile">Modify Profile</button>
       </ng-container>
     </div>
   </div>
@@ -18,8 +19,8 @@
 <div class="row justify-content-center" *ngIf="roleUser === 'ROLE_PROFESSIONAL'">
   <div class="col-lg-6 mt-5 mt-lg-0">
     <!-- Menu -->
-    <div class="mb-3">
-      <small class="text-uppercase font-weight-bold">Welcome <b>{{name}}</b>.<br/></small>
+    <div class="col-sm-9">
+      <h1 class="display-2 mb-0">Welcome <b>{{name}}</b>,</h1>
     </div>
     <div class="d-flex justify-content-center">
       <ng-container class="custom-tab-content flex-column flex-md-row">
@@ -34,8 +35,8 @@
 <div class="row justify-content-center" *ngIf="roleUser === 'ROLE_RECEPTIONIST'">
   <div class="col-lg-6 mt-5 mt-lg-0">
     <!-- Menu -->
-    <div class="mb-3">
-      <small class="text-uppercase font-weight-bold">Welcome <b>{{name}}</b>.<br/></small>
+    <div class="col-sm-9">
+      <h1 class="display-2 mb-0">Welcome <b>{{name}}</b>,</h1>
     </div>
     <div class="d-flex justify-content-center">
       <ng-container class="custom-tab-content flex-column flex-md-row">
