--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -36,7 +36,7 @@
           <a class="nav-link no-caret" id="navbar-primary_dropdown_1" ngbDropdownToggle>{{username}}</a>
           <div class="dropdown-menu-right" aria-labelledby="navbar-primary_dropdown_1" ngbDropdownMenu>
             <a class="dropdown-item" (click)="goToUserProfile()">Profile</a>
-            <a class="dropdown-item" href="javascript:void(0)">Settings</a>
+            <a class="dropdown-item" (click)="goToSettings()">Settings</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" (click)="logout()">Logout</a>
           </div>
