--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,23 @@
-<div class="reddit-body">
-  <div class="container">
-    <div class="row">
-      <hr />
-      <div class="col-md-9">
-        <app-post-tile [posts]="posts"></app-post-tile>
-      </div>
-      <div class="col-md-3">
-        <app-side-bar></app-side-bar>
-        <app-subreddit-side-bar></app-subreddit-side-bar>
-      </div>
+<div class="container">
+  <div class="col-lg-12 mb-lg-auto">
+    <!--      <div class="rounded shadow-lg overflow-hidden transform-perspective-right">-->
+    <ngb-carousel>
+      <ng-template ngbSlide>
+        <img class="img-fluid" src="../../assets/img/hero-bg.jpg" alt="First slide">
+      </ng-template>
+      <ng-template ngbSlide>
+        <img class="img-fluid" src="../../assets/img/about.jpg" alt="Second slide">
+      </ng-template>
+    </ngb-carousel>
+    <!--      </div>-->
+  </div>
+  <div class="row">
+    <hr/>
+    <div class="col-md-9">
+      <!--        <app-post-tile [posts]="posts"></app-post-tile>-->
+    </div>
+    <div class="col-md-3">
+      <!--        <app-side-bar></app-side-bar>-->
     </div>
   </div>
 </div>
