--- a/src/app/auth/user-profile/user-profile.component.html
+++ b/src/app/auth/user-profile/user-profile.component.html
@@ -9,7 +9,7 @@
       <ng-container class="custom-tab-content flex-column flex-md-row">
         <button class="btn btn-1 btn-neutral" type="button">Search Professionals</button>
         <button class="btn btn-1 btn-neutral" type="button" routerLink="register-pet">Add Pet</button>
-        <button class="btn btn-1 btn-neutral" type="button">View Pets</button>
+        <button class="btn btn-1 btn-neutral" type="button" routerLink="manage-pets">Manage Pets</button>
         <button class="btn btn-1 btn-neutral" type="button">Attach Medical Studies</button>
         <button class="btn btn-1 btn-neutral" type="button" routerLink="modify-profile">Modify Profile</button>
       </ng-container>
