--- a/src/app/auth/user-profile/user-profile.component.html
+++ b/src/app/auth/user-profile/user-profile.component.html
@@ -11,7 +11,7 @@
         <button class="btn btn-1 btn-neutral" type="button" routerLink="register-pet">Add Pet</button>
         <button class="btn btn-1 btn-neutral" type="button" routerLink="manage-pets">Manage Pets</button>
         <button class="btn btn-1 btn-neutral" type="button">Attach Medical Studies</button>
-        <button class="btn btn-1 btn-neutral" type="button" routerLink="modify-profile">Modify Profile</button>
+        <button class="btn btn-1 btn-neutral" type="button" routerLink="update">Modify Profile</button>
       </ng-container>
     </div>
   </div>
