--- a/src/app/auth/settings/settings.component.html
+++ b/src/app/auth/settings/settings.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="d-flex justify-content-center">
       <ng-container class="custom-tab-content flex-column flex-md-row">
-        <button class="btn btn-1 btn-neutral" type="button">Delete Account</button>
+        <button (click)="deleteUser()" class="btn btn-1 btn-neutral" type="button">Delete Account</button>
       </ng-container>
     </div>
   </div>
